lib_LTLIBRARIES = librsmathutils.la
librsmathutils_la_SOURCES =                \
	correlation.c                          \
	filter.c                               \
	geom.c                                 \
	linalg.c                               \
	multivar_analysis.c                    \
	regression.c                           \
	stats.c                                \
	utils.c
librsmathutils_la_LIBADD = ../nifti/librsniftiutils.la @LIBOBJS@

pkginclude_HEADERS =                       \
	correlation.h                          \
	filter.h                               \
	geom.h                                 \
	linalg.h                               \
	multivar_analysis.h                    \
	regression.h                           \
	rsmathutils.h                          \
	stats.h                                \
	utils.h                                